Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

4/27/2010: WriteLineDocTask now supports multi-threading. Also, 
  StringBufferReader was renamed to StringBuilderReader and works on 
  StringBuilder now. In addition, LongToEnglishCountentSource starts from 0
  (instead of Long.MIN_VAL+10) and wraps around to MIN_VAL (if you ever hit 
  Long.MAX_VAL). (Shai Erera)

3/28/2010
  LUCENE-2353: Fixed bug in Config where Windows absolute path property values 
  were incorrectly handled (Shai Erera)
  
3/24/2010
  LUCENE-2343: Added support for benchmarking collectors. (Grant Ingersoll, Shai Erera)

2/21/2010
  LUCENE-2254: Add support to the quality package for running
  experiments with any combination of Title, Description, and Narrative.
  (Robert Muir)

1/28/2010
  LUCENE-2223: Add a benchmark for ShingleFilter. You can wrap any
  analyzer with ShingleAnalyzerWrapper and specify shingle parameters
  with the NewShingleAnalyzer task.  (Steven Rowe via Robert Muir)

1/14/2010
  LUCENE-2210: TrecTopicsReader now properly reads descriptions and
  narratives from trec topics files.  (Robert Muir)

1/11/2010
  LUCENE-2181: Add a benchmark for collation. This adds NewLocaleTask,
  which sets a Locale in the run data for collation to use, and can be
  used in the future for benchmarking localized range queries and sorts.
  Also add NewCollationAnalyzerTask, which works with both JDK and ICU
  Collator implementations. Fix ReadTokensTask to not tokenize fields
  unless they should be tokenized according to DocMaker config. The 
  easiest way to run the benchmark is to run 'ant collation'
  (Steven Rowe via Robert Muir)

12/22/2009
  LUCENE-2178: Allow multiple locations to add to the class path with
  -Dbenchmark.ext.classpath=... when running "ant run-task" (Steven
  Rowe via Mike McCandless)

12/17/2009
  LUCENE-2168: Allow negative relative thread priority for BG tasks
  (Mike McCandless)
